--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ html {
   }
 
   button {
-    @apply shadow-xl shadow-gray-600 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-[#F7F7F7]
+    @apply shadow-md shadow-gray-600 rounded-xl uppercase bg-gradient-to-r from-[#5651e5] to-[#709dff] text-[#F7F7F7]
   }
 }
 
